Fix comment text not wrapping around

--- a/src/app/sub-components/comment/comment.component.sass
+++ b/src/app/sub-components/comment/comment.component.sass
@@ -18,6 +18,8 @@
     white-space: pre
     padding-left: 10px
     padding-top: 8px
+    overflow-x: hidden
+    white-space: normal
 
 .commentDate
     position: absolute
